<resources>
    <string name="app_name">FindProfessionals</string>
    <string name="email_address">Email address</string>
    <string name="you_example_com">you@example.com</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="go_in">Go in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome_back">WELCOME BACK!</string>
</resources>